_sass/_base.scss
/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
	margin-bottom: $spacing-unit / 2;
}



/**
 * Images
 */
img {
	max-width: 100%;
	vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
	display: block;
}

figcaption {
	font-size: $small-font-size;
}



/**
 * Wrapper
 */
.wrapper {
	max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
	max-width:		 calc(#{$content-width} - (#{$spacing-unit} * 2));
	margin-right: auto;
	margin-left: auto;
	padding-right: $spacing-unit;
	padding-left: $spacing-unit;
	@extend %clearfix;

	@include media-query($on-laptop) {
		max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
		max-width:		 calc(#{$content-width} - (#{$spacing-unit}));
		padding-right: $spacing-unit / 2;
		padding-left: $spacing-unit / 2;
	}
}



/**
 * Clearfix
 */
%clearfix {

	&:after {
		content: "";
		display: table;
		clear: both;
	}
}

/* --------------------------------------------------------------------------------------------------- */

/* Helpers */
.lora-serif {
	font-family: 'Lora', serif;
}
.bold {
	font-weight: bold;
}

/* Make footer stick to bottom */
body {
	display: flex;
	min-height: 100vh;
	flex-direction: column;
}

main {
	flex: 1 0 auto;
}

/* Quotes */
blockquote {
	border-left: 5px solid #c5e1a5 !important;
}

/* Code formatting */
pre,
code {
	font-size: 15px;
	border-radius: 3px;
	background-color: #e6ee9c;
}

code {
	padding: 1px 5px;
}

pre {
	padding: 8px 12px;
	overflow-x: scroll;

	> code {
		border: 0;
		padding-right: 0;
		padding-left: 0;
	}
}

/* Paragraph */
.post-content,
.post-title,
.blog-title,
.post-list,
.rss-subscribe {
	font-family: 'Lora', serif;
}

.brand-logo {
	font-family: 'Averia Serif Libre', cursive;
}

/* Links */
p a {
	color: #c62828 !important;
	
	&:hover {
	text-decoration: underline;
	}

	&:visited {
	color: #ab47bc !important;
	}
}

/* Images */
img {
	margin-left: auto;
	margin-right: auto;
}

